# dev-packages

./: .gitignore  .travis.yml  CODEOWNERS  INSTALL  README.md  VERSION  __init__.py  as_ap_orbit.py  base_class.py  beam_optics.py  bpm.py  bpms.py  constants.py  correctors.py  dcct.py  egun.py  hl_classes.py  ict.py  kicker.py  klystron.py  li_llrf.py  ll_classes.py  magnets.py  main.py  main_transplines.py  matrix.py  orbit.py  requirements.txt  rf.py  screen.py  septum.py  setup.cfg  setup.py  sofb.py  temptest.ipynb  timing.py  units.py
siriuspy/: INSTALL  MANIFEST.in  Makefile  README.md  VERSION  pyproject.toml  requirements.txt  run_tests.py  setup.py  test_pwrsupply.py  tests_controller.py  tests_masearch.py  tests_pwrsupply.py
siriuspy/docs/source/: conf.py  index.rst  siriuspy.bsmp.rst  siriuspy.clientarch.rst  siriuspy.clientconfigdb.rst  siriuspy.clientconfigdb.types.rst  siriuspy.clientweb.rst  siriuspy.currinfo.rst  siriuspy.cycle.rst  siriuspy.devices.rst  siriuspy.diagbeam.bpm.rst  siriuspy.diagbeam.dcct.rst  siriuspy.diagbeam.ict.rst  siriuspy.diagbeam.rst  siriuspy.diagbeam.screen.rst  siriuspy.diagbeam.slit.rst  siriuspy.diagsys.lidiag.rst  siriuspy.diagsys.psdiag.rst  siriuspy.diagsys.pudiag.rst  siriuspy.diagsys.rfdiag.rst  siriuspy.diagsys.rst  siriuspy.dvfimgproc.rst  siriuspy.epics.rst  siriuspy.fofb.rst  siriuspy.idff.rst  siriuspy.injctrl.rst  siriuspy.machshift.rst  siriuspy.magnet.rst  siriuspy.meas.liemit.rst  siriuspy.meas.lienergy.rst  siriuspy.meas.rst  siriuspy.namesys.rst  siriuspy.optics.rst  siriuspy.opticscorr.rst  siriuspy.orbintlk.rst  siriuspy.oscilloscope.rst  siriuspy.posang.rst  siriuspy.pwrsupply.bsmp.rst  siriuspy.pwrsupply.pructrl.rst  siriuspy.pwrsupply.psctrl.rst  (+9 more)
siriuspy/examples/: ControllerSim.ipynb  ControllerVACA.ipynb  ramp.ipynb  ramp2.ipynb  run_ramps.py  servconf.ipynb
siriuspy/examples/.ipynb_checkpoints/: ControllerSim-checkpoint.ipynb  ramp-checkpoint.ipynb
siriuspy/examples/bbb_tests/: bbb.py  test_pru_sync.py
siriuspy/examples/beaglebone/: IOC.py  bbbtests.py  comandos.py  teste_onthefly.py
siriuspy/examples/ramp/: BoosterNormalized.ipynb  BoosterRamp.ipynb  Magnet.ipynb  WaveformDipole.ipynb  WaveformParam.ipynb  ramp.ipynb
siriuspy/examples/servconf/: delete_configs.ipynb  servconf.ipynb
siriuspy/ioc-test/: VERSION
siriuspy/ioc-test/ioc-test/: ioc-test.py  main.py  pvs.py
siriuspy/ioc_test/: VERSION  setup.py
siriuspy/ioc_test/ioc_test/: ioc_test.py  main.py  pvs.py
siriuspy/psirius/: util.py
siriuspy/psirius/ccdb/: implementation.py
siriuspy/psirius/magnet/: __init__.py  excdat.py
siriuspy/psirius/ns/: implementation.py
siriuspy/siriuspy/: Configuration.py  VERSION  __init__.py  callbacks.py  computer.py  csdev.py  dev_types.py  envars.py  factory.py  hosts-aliases.txt  logging.py  namedtuple.py  namedtupple.py  search.py  thread.py  util.py
siriuspy/siriuspy/bsmp/: __init__.py  commands.py  constants.py  entities.py  exceptions.py  implementation.py  serial.py  types.py
siriuspy/siriuspy/ccdb/: implementation.py
siriuspy/siriuspy/clientarch/: __init__.py  client.py  devices.py  exceptions.py  fetch.py  pvarch.py  time.py  timestamp.py
siriuspy/siriuspy/clientconfigdb/: __init__.py  _templates.py  configdb_client.py  configdb_document.py  pvsconfig.py
siriuspy/siriuspy/clientweb/: __init__.py  implementation.py
siriuspy/siriuspy/cs_device/: __init__.py  enumtypes.py  magnetps.py  pspvdb.py
siriuspy/siriuspy/csdevice/: __init__.py  bpms.py  const.py  csdevice.py  (+19 more)
siriuspy/test/: VERSION
siriuspy/tests/: __init__.py  mock_servweb.py  run_all_tests.sh  test_callbacks.py  test_computer.py  test_csdev.py  test_envars.py  test_factory.py  test_logging.py  test_pups.py  test_search.py  test_util.py  tests_all.py  tests_controller.py  tests_magnet_psdipole.py  tests_magnet_psfam.py  tests_magnet_pstrim.py  tests_masearch.py  tests_powersupply_ma.py  tests_pups.py  tests_pwrsupply.py  tests_pwrsupply_controlller.py  tests_pwrsupply_epics.py  tests_pwrsupply_epicssync.py  tests_pwrsupply_epicssync2.py  tests_pwrsupply_ma.py  tests_pwrsupply_psma.py  tests_pwrsupply_sim.py  tests_search.py
siriuspy/tests-v1/: test_envars.py  test_factory.py  test_search.py  test_util.py
(+1965 files in other folders)
