# [build-system]
# requires = ["setuptools >= 61.0"]
# build-backend = "setuptools.build_meta"

# [project]
# name = "siriuspy"
# version = "2.85.0"
# dependencies = [
#     "aiohttp>=3.7.4",
#     "bottleneck>=1.3.2",
#     "mathphys",
#     "numpy>=1.18",
#     "pyepics>=3.4.0",
#     "python-dateutil>=2.8.1",
#     "requests>=2.22.0",
#     "six>=1.13.0",
#     "pyyaml",
# ]
# requires-python = ">=3.6"
# authors = [
#   {name = "lnls-sirius"},
# ]
# maintainers = [
#   {name = "Ana Oliveira", email = "ana.clara@lnls.br"},
#   {name = "Ximenes Resende", email = "xresende@gmail.com"},
#   {name = "Fernando H. de Sá", email = "fernandohds564@gmail.com"},
#   {name = "Murilo Barbosa Alves", email= "murilo.alves@lnls.br"}
# ]
# description = "Development packages for SIRIUS"
# readme = "README.md"
# license = {file = "LICENSE.txt"}
# keywords = ["SIRIUS", "python", "EPICS"]
# classifiers = [
#     "Intended Audience :: Science/Research",
#     "Programming Language :: Python",
#     "Topic :: Scientific/Engineering",
# ]

# [project.urls]
# # Homepage = ""
# # Documentation = ""
# Repository = "https://github.com/lnls-sirius/dev-packages"
# "Bug Tracker" = "https://github.com/lnls-sirius/dev-packages/issues"
# # Changelog = ""

# # [project.optional-dependencies]
# # gui = []
# # cli = []

# # [project.scripts]

# # [project.gui-scripts]


[tool.ruff]
select = [
    "W", "E", "A", "B", "C90", "D", "I002", "N", "F", "G", "ARG", "S", "NPY"]
ignore = [
    "D203", "D204", "D213", "D215", "D400", "D401", "D404", "D406", "D407",
    "D408", "D409", "D413", "E203", "E226"]
ignore-init-module-imports = true
preview = true
line-length = 79
fix = true

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401", "F821"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false
combine-as-imports = true

[tool.isort]
split_on_trailing_comma = false
combine_as_imports = true
combine_star = true
multi_line_output = "HANGING_INDENT"
order_by_type = false

[tool.black]
line-length = 79
