[build-system]
requires = ["setuptools>=44"]
build-backend = "setuptools.build_meta"

[project]
name = "siriuspy"
authors = [{ name = "lnls-sirius" } ]
maintainers = [
  {name = "Ana Oliveira", email = "ana.clara@lnls.br"},
  {name = "Ximenes Resende", email = "xresende@gmail.com"},
  {name = "Fernando H. de Sá", email = "fernandohds564@gmail.com"},
  {name = "Murilo Barbosa Alves", email= "alvesb.murilo@gmail.com"}
]
description = "Development packages for Sirius"
readme = "README.md"
dynamic = ["version", "dependencies"]
requires-python = ">=3.6"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
keywords = ["SIRIUS", "python", "EPICS"]

license = "GPL-3.0"
license-files= [ "LICENSE", ]

[project.urls]
Homepage = "https://github.com/lnls-sirius/dev-packages"
Download = "https://github.com/lnls-sirius/dev-packages"
Repository = "https://github.com/lnls-sirius/dev-packages.git"
Issues = "https://github.com/lnls-sirius/dev-packages/issues"

# --- Setuptools specific configurations ---
[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { file = "VERSION" }
dependencies = { file = "requirements.txt" }

[tool.setuptools.package-data]
siriuspy = ["VERSION"]

# --- linter and formatter configurations ---
[tool.ruff]
select = [
    "W", "E", "A", "B", "C90", "D", "I002", "N", "F", "G", "ARG", "S", "NPY"]
ignore = [
    "D203", "D204", "D213", "D215", "D400", "D401", "D404", "D406", "D407",
    "D408", "D409", "D413", "E203", "E226"]
ignore-init-module-imports = true
preview = true
line-length = 79
fix = true

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401", "F821"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false
combine-as-imports = true

[tool.isort]
split_on_trailing_comma = false
combine_as_imports = true
combine_star = true
multi_line_output = "HANGING_INDENT"
order_by_type = false

[tool.black]
line-length = 79
